# Rustulator

./: Cargo.toml  README.md  Rocket.toml
calculator/: Cargo.toml
calculator/src/: ast.rs  calc.rs  eval.rs  lexer.rs  lib.rs  parser.rs
elm/: main.html  main.js
elm/elm-stuff/0.19.0/: Main.elmi  Main.elmo
elm/src/: main.elm
repl/: Cargo.toml
src/: .lexer.rs.swp  ast.rs  eval.rs  lexer.rs  main.rs  parser.rs  repl.rs  web.rs
static/: index.html
templates/: index.html.tera  output.html.tera
